--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,19 @@ main {
     line-height: 1.5;
     letter-spacing: 0.02em;
     padding: 24px 0;
+    display: flex;
+}
+
+.studio-item::after {
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 48px;
+    height: 4px;
+    border-radius: 2px;
+    background: #404BBF;
+    content: "";
 }
 
 .list-items:hover, .list-items:focus {
@@ -140,6 +153,11 @@ main {
     padding-top: 188px;
     padding-bottom: 188px;
     background-color: #2E2F42;
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), 
+    url('/images/hero.svg');
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: cover;
 }
 
 .title {
@@ -201,6 +219,18 @@ main {
     width: calc((100% - 72px) / 4);
 }
 
+.icon {
+    width: 264px;
+    height: 112px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    border: 1px solid #8E8F99;
+    background-color: #F4F4FD;
+    fill: #2E2F42;
+    padding: 24px 100px;
+    margin-bottom: 8px;
+}
+
 .strategy {
     color:#2E2F42;
     font-size: 20px;
@@ -242,6 +272,12 @@ main {
     justify-content: center;
     align-items: center;
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+.team-list:hover .social-items, 
+.team-list:focus .social-items {
+    background-color: #404BBF;
 }
 
 .team-container {
@@ -255,6 +291,23 @@ main {
 
 .team-paragraph {
     text-align: center;
+    margin-bottom: 8px;
+}
+
+.socials {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+}
+
+.social-items {
+    background-color: #4D5AE5;
+    border-radius: 50%;
+    fill: #f4f4fd;
+    padding: 12px;
+    width: 40px;
+    height: 40px;
 }
 
 /*Forths section*/
@@ -310,6 +363,7 @@ main {
 
 .footer .paragraph {
     color: #F4F4FD;
+    width: 264px;
 }
 
 .logo-footer {
@@ -327,3 +381,26 @@ main {
 .logo-footer .logo-footer-white {
     color: #F4F4FD;
 }
+
+.socials-footer {
+    display: flex;
+    gap: 120px;
+}
+
+.footer-paragraph {
+    display: inline;
+    color:#FFF;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02;
+    margin-left: 269px;
+    margin-bottom: 16px;
+}
+
+.socials {
+    display: inline-flex;
+}
+
+
+
+
