--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,10 @@ main {
     display: flex;
 }
 
+.studio-item .list-items {
+    color: #404bbf;
+}
+
 .studio-item::after {
     display: flex;
     gap: 20px;
@@ -318,6 +322,34 @@ main {
     border-top: none;
 }
 
+.overlay-box {
+    position: relative;
+    width: 360px;
+    height: 300px;
+    overflow: hidden;
+}
+
+.overlay {  /* cashless payment h3 and Marketing p are out :) */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #4D5AE5;
+
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0 0.2, 1);
+}
+
+.overlay p {
+    color:#F4F4FD;
+    padding: 40px 32px 164px 32px;
+}
+
+.overlay-box:hover .overlay {
+    transform: translateY(0);
+}
+
 .portfolio-header {
     font-size: 36px;
     line-height: 1.11;
@@ -337,6 +369,11 @@ main {
 
 .list-portfolio {
     width: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.list-portfolio:hover {
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .list-portfolio .strategy {
@@ -399,6 +436,14 @@ main {
 
 .socials {
     display: inline-flex;
+}
+
+.socials-footer .social-items {
+    transition: background-color 250ms cubic-bezier(0.4, 0 0.2, 1);
+}
+
+.social-items:hover {
+    background-color: #31D0AA;
 }
 
 
