--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,7 @@ main {
 .header {
     background:#FFF;
     border-bottom: 1px solid #E7E9FC;
+    box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 
 .nav {
@@ -77,6 +78,7 @@ main {
     letter-spacing: 0.54px;
     letter-spacing: 0.03em;
     margin-right: 76px;
+    position: relative;
 }
 
 .logo-header:hover, 
@@ -98,6 +100,8 @@ main {
     letter-spacing: 0.02em;
     padding: 24px 0;
     display: flex;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .studio-item .list-items {
@@ -114,6 +118,9 @@ main {
     border-radius: 2px;
     background: #404BBF;
     content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
 }
 
 .list-items:hover, .list-items:focus {
@@ -135,6 +142,7 @@ main {
 .address-list {
     color: #434455;
     padding: 24px 0;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-list:hover, .address-list:focus {
@@ -193,6 +201,8 @@ main {
     margin-top: 48px;
     margin-left: 479px;
     padding: 16px 32px;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } 
 
 .button:hover, button:focus {
@@ -221,6 +231,12 @@ main {
 
 .list-features-item {
     width: calc((100% - 72px) / 4);
+}
+
+.svg-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .icon {
@@ -279,11 +295,6 @@ main {
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
-.team-list:hover .social-items, 
-.team-list:focus .social-items {
-    background-color: #404BBF;
-}
-
 .team-container {
     padding: 32px 0;
 }
@@ -308,13 +319,24 @@ main {
 .social-items {
     background-color: #4D5AE5;
     border-radius: 50%;
-    fill: #f4f4fd;
     padding: 12px;
     width: 40px;
     height: 40px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/*Forths section*/
+.social-link-section {
+    width: 100%;
+    height: 100%;
+    fill: #F4F4FD;
+}
+
+.social-items:hover,
+.social-items:focus {
+    background-color: #404BBF;
+}
+
+/*Fourths section*/
 
 .portfolio-container {
     padding: 32px 16px;
@@ -329,25 +351,22 @@ main {
     overflow: hidden;
 }
 
-.overlay {  /* cashless payment h3 and Marketing p are out :) */
+.overlay { 
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: #4D5AE5;
+    color:#F4F4FD;
+    padding: 40px 32px;
 
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0 0.2, 1);
 }
 
-.overlay p {
-    color:#F4F4FD;
-    padding: 40px 32px 164px 32px;
-}
-
 .overlay-box:hover .overlay {
-    transform: translateY(0);
+    transform: translateY(0%);
 }
 
 .portfolio-header {
@@ -398,6 +417,15 @@ main {
     padding: 100px 0;
 }
 
+.footer-container {
+    display: flex;
+    align-items: baseline;
+}
+
+.logo-container {
+    margin-right: 120px;
+}
+
 .footer .paragraph {
     color: #F4F4FD;
     width: 264px;
@@ -419,33 +447,20 @@ main {
     color: #F4F4FD;
 }
 
-.socials-footer {
-    display: flex;
-    gap: 120px;
-}
-
 .footer-paragraph {
-    display: inline;
     color:#FFF;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02;
-    margin-left: 269px;
     margin-bottom: 16px;
 }
 
 .socials {
-    display: inline-flex;
+    display: flex;
+    gap: 16px;
 }
 
-.socials-footer .social-items {
-    transition: background-color 250ms cubic-bezier(0.4, 0 0.2, 1);
-}
-
-.social-items:hover {
+.social-items-footer:hover,
+.social-items-footer:focus {
     background-color: #31D0AA;
 }
-
-
-
-
