--- a/css/styles.css
+++ b/css/styles.css
@@ -108,6 +108,7 @@ main {
 .studio-item .list-items {
     color: #404bbf;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    position: relative;
 }
 
 .studio-item::after {
@@ -172,7 +173,7 @@ main {
     padding-bottom: 188px;
     background-color: #2E2F42;
     background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), 
-    url('/images/hero.svg');
+    url('../images/hero.jpg');
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: cover;
@@ -243,12 +244,16 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
+
+    /*height: 112px;
+    background-color: #F4F4FD;
+    border-radius: 4px;
+    margin-bottom: 8px;*/
 }
 
 .icon {
     width: 264px;
     height: 112px;
-    flex-shrink: 0;
     border-radius: 4px;
     border: 1px solid #8E8F99;
     background-color: #F4F4FD;
@@ -329,6 +334,9 @@ main {
     width: 40px;
     height: 40px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .social-link-section {
@@ -367,8 +375,8 @@ main {
     color:#F4F4FD;
     padding: 40px 32px;
 
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0 0.2, 1);
 }
 
 .overlay-box:hover .overlay {
@@ -469,4 +477,15 @@ main {
 .social-items-footer:hover,
 .social-items-footer:focus {
     background-color: #31D0AA;
+}
+
+.social-link-footer {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    fill: #F4F4FD;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
