--- a/css/styles.css
+++ b/css/styles.css
@@ -177,6 +177,7 @@ main {
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: cover;
+    max-width: 1440px;
 }
 
 .title {
@@ -245,19 +246,12 @@ main {
     align-items: center;
     justify-content: center;
 
-    /*height: 112px;
-    background-color: #F4F4FD;
-    border-radius: 4px;
-    margin-bottom: 8px;*/
-}
-
-.icon {
-    width: 264px;
     height: 112px;
-    border-radius: 4px;
-    border: 1px solid #8E8F99;
+    width: 264px;
     background-color: #F4F4FD;
     fill: #2E2F42;
+    border-radius: 4px;
+    border: 1px solid #8E8F99;
     padding: 24px 100px;
     margin-bottom: 8px;
 }
