--- a/css/styles.css
+++ b/css/styles.css
@@ -473,6 +473,11 @@ main {
     background-color: #31D0AA;
 }
 
+.social-link-footer:hover,
+.social-link-footer:focus {
+    background-color: #31d0aa;
+}
+
 .social-link-footer {
     width: 100%;
     height: 100%;
@@ -482,4 +487,5 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
